fix: content fix for transparent